[Autofill] Skip finding type of a sign-in form password field.

An upload for sign-in form comes from Password Manager and password value is not set. Without this patch profile.GetMatchingTypes adds EMPTY type in |matching_types| that is not correct and moreover it causes DCHECK failure in https://cs.chromium.org/chromium/src/components/autofill/core/browser/autofill_metrics.cc?q=autofill_metrics.cc&sq=package:chromium&dr&l=335 and in other places.   

Bug: 742464
Change-Id: Iece3caa40337c15828ab76fcb2ff3e68e659599d
Reviewed-on: https://chromium-review.googlesource.com/570167
Commit-Queue: Vadym Doroshenko <dvadym@chromium.org>
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487142}
Former-commit-id: c45f951d54317212473581b34ddded1b84db5dfd